# cmd/example/swagger/swagger_localhost_8080.json
@@ -55,15 +55,7 @@
       "post": {
         "security": [
           {
-            "SecurityDefinitions": []
-          },
-          {
             "basic": []
-          },
-          {
-            "type": [
-              "basic"
-            ]
           }
         ],
         "consumes": [
@@ -131,15 +123,7 @@
       "post": {
         "security": [
           {
-            "SecurityDefinitions": []
-          },
-          {
             "basic": []
-          },
-          {
-            "type": [
-              "basic"
-            ]
           }
         ],
         "consumes": [
@@ -171,6 +155,79 @@
           },
           "500": {
             "$ref": "#/responses/ProxyPostResponseError"
+          }
+        }
+      }
+    },
+    "/redirect": {
+      "get": {
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "schemes": [
+          "http",
+          "https"
+        ],
+        "tags": [
+          "cors"
+        ],
+        "summary": "And endpoint that will redirect to another endpoint.",
+        "operationId": "redirect_get",
+        "parameters": [
+          {
+            "type": "string",
+            "x-go-name": "Endpoint",
+            "name": "endpoint",
+            "in": "query"
+          }
+        ],
+        "responses": {
+          "200": {
+            "$ref": "#/responses/RedirectGetResponseOK"
+          },
+          "500": {
+            "$ref": "#/responses/RedirectGetResponseError"
+          }
+        }
+      },
+      "post": {
+        "security": [
+          {
+            "basic": []
+          }
+        ],
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "schemes": [
+          "http",
+          "https"
+        ],
+        "tags": [
+          "cors"
+        ],
+        "summary": "And endpoint that will redirect to another endpoint.",
+        "operationId": "redirect_post",
+        "parameters": [
+          {
+            "type": "string",
+            "x-go-name": "Endpoint",
+            "name": "endpoint",
+            "in": "query"
+          }
+        ],
+        "responses": {
+          "200": {
+            "$ref": "#/responses/RedirectPostResponseOK"
+          },
+          "500": {
+            "$ref": "#/responses/RedirectPostResponseError"
           }
         }
       }
@@ -252,6 +309,24 @@
       }
     },
     "ProxyPostResponseOK": {
+      "description": ""
+    },
+    "RedirectGetResponseError": {
+      "description": "",
+      "schema": {
+        "$ref": "#/definitions/Error"
+      }
+    },
+    "RedirectGetResponseOK": {
+      "description": ""
+    },
+    "RedirectPostResponseError": {
+      "description": "",
+      "schema": {
+        "$ref": "#/definitions/Error"
+      }
+    },
+    "RedirectPostResponseOK": {
       "description": ""
     }
   },
